--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://kakaobankqa.onelink.me/ch/4YRm/mt8asked">https://kakaobankqa.onelink.me/ch/4YRm/mt8asked</h1>
+      <h1><a href="https://oliveyoung.onelink.me/wuJL?&pid=facebook_int&af_click_lookback=14d&af_reengagement_window=14d&is_retargeting=true&c=a37077&af_adset=b37077&af_ad=c37077&deep_link_value=https%3A%2F%2Fma.oliveyoung.co.kr%2Fm%2Fplanshop%2FgetPlanShopDetail.do%3FdispCatNo%3D500000103650008%26utm_source%3Dfacebook%26utm_medium%3Ddisplay%26utm_campaign%3Donpro_echo_oypick_0801_0829%26utm_content%3Dlogo_SNS&af_android_url=https%3A%2F%2Fm.oliveyoung.co.kr%2Fm%2Fplanshop%2FgetPlanShopDetail.do%3FdispCatNo%3D500000103650008&af_ios_url=https%3A%2F%2Fm.oliveyoung.co.kr%2Fm%2Fplanshop%2FgetPlanShopDetail.do%3FdispCatNo%3D500000103650008%26ets_source%3DFBIG%26ets_medium%3D%EB%B0%B0%EB%84%88%EA%B4%91%EA%B3%A0%26ets_campaign%3Da37077%26ets_group%3Db37077%26ets_term%3Dc37077%26utm_source%3Dfacebook%26utm_medium%3Ddisplay%26utm_campaign%3Donpro_echo_oypick_0801_0829%26utm_content%3Dlogo_SNS&af_force_deeplink=true&af_dp=oliveyoungappsflyer%3A%2F%2F&goodsNo=A000000204538&fbclid=PAZXh0bgNhZW0BMAABptuQL7Eh1pW0GFD8HtSn46DI0EIRzpmrKnZr9bOh5tLQzGaau5HcWwoinQ_aem_Sr6dyjGes_k8-iCtPiLmtQ">Oliveyoung</h1>
     </main>
 </body>
 
