snow onelink test 2

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://snow.onelink.me/4056789859/g1y5704l?snow_token=66f65db37f5a274c46eac7ef&locale=ko&DUID=1040281510.1721335577">https://snow.onelink.me/4056789859/g1y5704l?snow_token=66f65db37f5a274c46eac7ef&locale=ko&DUID=1040281510.1721335577</h1>  
+      <h1><a href="https://snow.onelink.me/4056789859/g1y5704l?token=444545">https://snow.onelink.me/4056789859/g1y5704l?token=444545</h1>  
     </main>
 </body>
 
