--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://snow.onelink.me/4056789859/g1y5704l?token=444545">https://snow.onelink.me/4056789859/g1y5704l?token=444545</h1>  
+      <h1><a href="https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true">https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true</h1>  
     </main>
 </body>
 
