webtoon onelink test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true">https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true</h1>  
+      <h1><a href="https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true">https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true</h1>
+      <h1><a href="https://webtoons.onelink.me/Jzmu/s3sze53e">https://webtoons.onelink.me/Jzmu/s3sze53e</h1>
     </main>
 </body>
 
