--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,8 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true">https://u-planner.onelink.me/ZxrR?pid=lifeplanet_bn&c=%EB%9D%BC%ED%94%8C365&deep_link_value=link_value&af_dp=acha%3A%2F%2Faction&af_force_deeplink=true</h1>
       <h1><a href="https://webtoons.onelink.me/Jzmu/s3sze53e">https://webtoons.onelink.me/Jzmu/s3sze53e</h1>
+      <h1><a href="https://webtoons.onelink.me/Jzmu?af_ios_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_android_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_web_dp=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_xp=custom&pid=US_Thales&c=US_BNP_Thales_Series_BatmanWayneFamilyAdventures_240213&is_retargeting=true&af_reengagement_window=30d&af_inactivity_window=7d&deep_link_value=linewebtoon%3A%2F%2FepisodeList%2Fwebtoon%3FtitleNo%3D3180&af_click_lookback=1d">https://webtoons.onelink.me/Jzmu?af_ios_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_android_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_web_dp=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_xp=custom&pid=US_Thales&c=US_BNP_Thales_Series_BatmanWayneFamilyAdventures_240213&is_retargeting=true&af_reengagement_window=30d&af_inactivity_window=7d&deep_link_value=linewebtoon%3A%2F%2FepisodeList%2Fwebtoon%3FtitleNo%3D3180&af_click_lookback=1d</h1>      
     </main>
 </body>
 
