chrome universal links

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,9 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://webtoons.onelink.me/Jzmu/s3sze53e">https://webtoons.onelink.me/Jzmu/s3sze53e</h1>
-      <h1><a href="https://webtoons.onelink.me/Jzmu?af_ios_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_android_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_web_dp=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_xp=custom&pid=US_Thales&c=US_BNP_Thales_Series_BatmanWayneFamilyAdventures_240213&is_retargeting=true&af_reengagement_window=30d&af_inactivity_window=7d&deep_link_value=linewebtoon%3A%2F%2FepisodeList%2Fwebtoon%3FtitleNo%3D3180&af_click_lookback=1d">https://webtoons.onelink.me/Jzmu?af_ios_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_android_url=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_web_dp=https%3A%2F%2Fwww.webtoons.com%2Fen%2Fslice-of-life%2Fbatman-wayne-family-adventures%2Flist%3Ftitle_no%3D3180&af_xp=custom&pid=US_Thales&c=US_BNP_Thales_Series_BatmanWayneFamilyAdventures_240213&is_retargeting=true&af_reengagement_window=30d&af_inactivity_window=7d&deep_link_value=linewebtoon%3A%2F%2FepisodeList%2Fwebtoon%3FtitleNo%3D3180&af_click_lookback=1d</h1>
-      <h1><a href="linewebtoon://episodeList/webtoon?titleNo=3180">linewebtoon://episodeList/webtoon?titleNo=3180</h1>
+      <h1><a href="https://kakaobank.onelink.me/0qMi/9sd9mx73">https://kakaobank.onelink.me/0qMi/9sd9mx73</h1>
         
     </main>
 </body>
