--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://kakaobank.onelink.me/0qMi/9sd9mx73">https://kakaobank.onelink.me/0qMi/9sd9mx73</h1>
+      <h1><a href="https://helloteepee.onelink.me/j6Xr/yqab29xr">https://helloteepee.onelink.me/j6Xr/yqab29xr</h1>
         
     </main>
 </body>
