changed uri scheme

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="ssfshop-app://gotourl?url=https://m.ssfshop.com/UMER%2FGRDG25020310543%2Fgood&advertising_id=b64f7cbc-2af8-44f9-8548-e7c9dffbbac2&af_click_lookback=1d&af_deeplink=true&af_dp=ssfshop-app%3A%2F%2Fgotourl%3Furl%3Dhttps%3A%2F%2Fm.ssfshop.com%2FUMER%252FGRDG25020310543%252Fgood&af_reengagement_window=1d&af_siteid=BICDHMDXSVLVKVE64NJGWT5IMCS47R6U6HW7QODVEUKORQH2HM7Q&af_sub5=OGEWCL8C6LUEg37cOLdeIu7RD0GAGdbNeApZdizHU9Q.GRDG25020310543.1740360677806.CLASSIC.ECiOt4nfU1akdkYyCERl.&campaign=rtbhouse-retargeting&clickid=ECiOt4nfU1akdkYyCERl-1740360677806&is_retargeting=true&media_source=rtbhouse_int">ssfshop-app://gotourl?url=https://m.ssfshop.com/UMER%2FGRDG25020310543%2Fgood&advertising_id=b64f7cbc-2af8-44f9-8548-e7c9dffbbac2&af_click_lookback=1d&af_deeplink=true&af_dp=ssfshop-app%3A%2F%2Fgotourl%3Furl%3Dhttps%3A%2F%2Fm.ssfshop.com%2FUMER%252FGRDG25020310543%252Fgood&af_reengagement_window=1d&af_siteid=BICDHMDXSVLVKVE64NJGWT5IMCS47R6U6HW7QODVEUKORQH2HM7Q&af_sub5=OGEWCL8C6LUEg37cOLdeIu7RD0GAGdbNeApZdizHU9Q.GRDG25020310543.1740360677806.CLASSIC.ECiOt4nfU1akdkYyCERl.&campaign=rtbhouse-retargeting&clickid=ECiOt4nfU1akdkYyCERl-1740360677806&is_retargeting=true&media_source=rtbhouse_int</h1>
+      <h1><a href="ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view">ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view</h1>
       <h1><a href="https://ssf.onelink.me/L6th/appluckybox">https://ssf.onelink.me/L6th/appluckybox</h1>
       <h1><a href="https://link.ohou.se/b0y6rq">https://link.ohou.se/b0y6rq</h1>
     </main>
