added onelink template

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -13,6 +13,7 @@
       <h1><a href="ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view">ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view</h1>
       <h1><a href="https://ssf.onelink.me/L6th/appluckybox">https://ssf.onelink.me/L6th/appluckybox</h1>
       <h1><a href="https://link.ohou.se/b0y6rq">https://link.ohou.se/b0y6rq</h1>
+      <h1><a href="https://ssf.onelink.me/L6th">https://ssf.onelink.me/L6th</h1>
     </main>
 </body>
 
