stayge onelink chrome test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,11 +10,8 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view">ssfshop-app://gotourl?url=https://m.ssfshop.com/event/EV202501140146567/view</h1>
-      <h1><a href="https://ssf.onelink.me/L6th/appluckybox">https://ssf.onelink.me/L6th/appluckybox</h1>
-      <h1><a href="https://link.ohou.se/b0y6rq">https://link.ohou.se/b0y6rq</h1>
-      <h1><a href="https://ssf.onelink.me/L6th">https://ssf.onelink.me/L6th</h1>
-      <h1><a href="https://link.ohou.se">https://link.ohou.se</h1>
+      <h1><a href="https://linc.onelink.me/31TL/sbsvoteyoutube">https://linc.onelink.me/31TL/sbsvoteyoutube</h1>
+      <h1><a href="https://linc.onelink.me/31TL/sbsboard">https://linc.onelink.me/31TL/sbsboard</h1>
     </main>
 </body>
 
