stayge app store url test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -12,6 +12,8 @@
       <h1><a href="https://www.google.com">Google</h1>
       <h1><a href="https://linc.onelink.me/31TL/sbsvoteyoutube">https://linc.onelink.me/31TL/sbsvoteyoutube</h1>
       <h1><a href="https://linc.onelink.me/31TL/sbsboard">https://linc.onelink.me/31TL/sbsboard</h1>
+      <h1><a href="https://linc.onelink.me/31TL?af_xp=social&pid=Social_youtube&c=%EC%9C%A0%ED%8A%9C%EB%B8%8C%20%EC%84%A4%EB%AA%85%EB%9E%80%20%EC%BA%A0%ED%8E%98%EC%9D%B8&af_channel=youtube&af_dp=lincapp%3A%2F%2F&af_ios_url=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fid6467824343">with af_dp</h1>
+      <h1><a href="https://linc.onelink.me/31TL?af_xp=social&pid=Social_youtube&c=%EC%9C%A0%ED%8A%9C%EB%B8%8C%20%EC%84%A4%EB%AA%85%EB%9E%80%20%EC%BA%A0%ED%8E%98%EC%9D%B8&af_channel=youtube&af_ios_url=https%3A%2F%2Fapps.apple.com%2Fus%2Fapp%2Fid6467824343">without af_dp</h1>  
     </main>
 </body>
 
