--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,8 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://www.zigbang.com">https://www.zigbang.com</h1>
-      <h1><a href="https://www.zigbang.net">https://www.zigbang.net</h1>
+      <h1><a href="https://lotteeatz.onelink.me/7DS6/kuldc7zm">https://lotteeatz.onelink.me/7DS6/kuldc7zm</h1>
     </main>
 </body>
 
