--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,7 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://lotteeatz.onelink.me/7DS6/rt6a8xp2">https://lotteeatz.onelink.me/7DS6/rt6a8xp2</h1>
+      <h1><a href="https://musinsa.onelink.me/kfr0/s8rycr1v">https://musinsa.onelink.me/kfr0/s8rycr1v</h1>
     </main>
 </body>
 
