naver onelink test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -11,6 +11,7 @@
     <main>
       <h1><a href="https://www.google.com">Google</h1>
       <h1><a href="https://kurly-test.onelink.me/IegH?pid=organic_webtoapp&c=webtoapp&af_adset=webtoapp&af_ad=webtoapp&af_sub1=9999&is_retargeting=true&deep_link_value=kurly%3A%2F%2Fopen%3Furl%3Dhttps%3A%2F%2Fevent.kurly.com%2Flego%2Fevent%2F2023%2F0911%2Fjoin%2Fcoupon&af_dp=kurly%3A%2F%2Fopen%3Furl%3Dhttps%3A%2F%2Fevent.kurly.com%2Flego%2Fevent%2F2023%2F0911%2Fjoin%2Fcoupon&af_click_lookback=1d&af_reengagement_window=1d&af_force_deeplink=true&af_r=https%3A%2F%2Fwww.kurly.com%2Fgoods%2F1001503350">https://kurly-test.onelink.me/IegH?pid=organic_webtoapp&c=webtoapp&af_adset=webtoapp&af_ad=webtoapp&af_sub1=9999&is_retargeting=true&deep_link_value=kurly%3A%2F%2Fopen%3Furl%3Dhttps%3A%2F%2Fevent.kurly.com%2Flego%2Fevent%2F2023%2F0911%2Fjoin%2Fcoupon&af_dp=kurly%3A%2F%2Fopen%3Furl%3Dhttps%3A%2F%2Fevent.kurly.com%2Flego%2Fevent%2F2023%2F0911%2Fjoin%2Fcoupon&af_click_lookback=1d&af_reengagement_window=1d&af_force_deeplink=true&af_r=https%3A%2F%2Fwww.kurly.com%2Fgoods%2F1001503350</h1>
+      <h1><a href="https://baeminkr.onelink.me/XgL8/dgomf9ci">https://baeminkr.onelink.me/XgL8/dgomf9ci</h1>  
     </main>
 </body>
 
