zigbang onelink test

--- a/onelink_test.html
+++ b/onelink_test.html
@@ -10,9 +10,7 @@
 <body>
     <main>
       <h1><a href="https://www.google.com">Google</h1>
-      <h1><a href="https://baeminkr.onelink.me/XgL8/dgomf9ci">https://baeminkr.onelink.me/XgL8/dgomf9ci</h1>
-      <h1><a href="https://naverapp.onelink.me/BTb5/8x4czjhu">https://naverapp.onelink.me/BTb5/8x4czjhu</h1>
-        
+      <h1><a href="https://zigbang.onelink.me/G5bn?af_xp=custom&pid=instagram&c=traffic_251110&deep_link_value=zigbang%3A%2F%2F%2Fhome%2Fapt%2Fmap&af_dp=zigbang%3A%2F%2F%2Fhome%2Fapt%2Fmap&af_click_lookback=1d&af_adset=img_chair&utm_medium=paid&utm_source=ig&utm_id=120234077031270158&utm_content=120235446620650158&utm_term=120234897827070158&utm_campaign=120234077031270158&fbclid=PAZXh0bgNhZW0BMABhZGlkAaspu2RoTE5zcnRjBmFwcF9pZA8xMjQwMjQ1NzQyODc0MTQAAadlRPrOi1ws2h4IHkdSTjWRdwoKoP8NyZltWmc85__CIdS-zpow3dR-Q4vzIA_aem_sTpHloXHf7pOJH1lD8uvhg">zigbang_onelink</h1>        
     </main>
 </body>
 
